[gd_scene load_steps=31 format=3 uid="uid://cbpfl3u1sces8"]

[ext_resource type="Texture2D" uid="uid://mkfka8goewlm" path="res://Graphics/texture_atlas.png" id="1_r5l00"]
[ext_resource type="Script" path="res://Scripts/generation.gd" id="2_55rjm"]
[ext_resource type="Script" path="res://Scripts/editor.gd" id="3_8tnfu"]
[ext_resource type="PackedScene" uid="uid://nvg7mfo4u3xm" path="res://Scenes/Objects/Player.tscn" id="3_ysbs2"]
[ext_resource type="Texture2D" uid="uid://c2osd6xhqkbjm" path="res://Graphics/break_animation.png" id="5_2clhb"]
[ext_resource type="Texture2D" uid="uid://c7l8jkid8rhuv" path="res://Graphics/overlay.png" id="5_v0isj"]
[ext_resource type="Script" path="res://Scripts/tile_overlay.gd" id="5_xiyli"]
[ext_resource type="Texture2D" uid="uid://cbtekxlaeushw" path="res://Graphics/background.png" id="8_gl2bt"]
[ext_resource type="Script" path="res://Scripts/background.gd" id="9_xtwht"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qyxuc"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_letoh"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_frxyh"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_nkakr"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_whn85"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_l7u66"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1e3nw"]
texture = ExtResource("1_r5l00")
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_qyxuc")
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
0:0/0/custom_data_0 = 1.0
0:0/0/custom_data_1 = true
0:0/0/custom_data_2 = "dirt"
1:0/0 = 0
1:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_letoh")
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
1:0/0/custom_data_0 = 1.0
1:0/0/custom_data_1 = true
1:0/0/custom_data_2 = "dirt"
2:0/0 = 0
2:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_frxyh")
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:0/0/custom_data_0 = 8.0
2:0/0/custom_data_2 = "stone"
3:0/0 = 0
3:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_nkakr")
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/custom_data_0 = -1.0
3:0/0/custom_data_2 = "bedrock"
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0/custom_data_0 = 0.5
4:0/0/custom_data_2 = "leaf"
5:0/0 = 0
5:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_whn85")
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0/custom_data_0 = 3.0
5:0/0/custom_data_1 = true
5:0/0/custom_data_2 = "oak_log"
6:0/0 = 0
6:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_l7u66")
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0/custom_data_0 = 3.5
6:0/0/custom_data_1 = true
6:0/0/custom_data_2 = "oak_log"
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_lyol3"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "MineTime"
custom_data_layer_0/type = 3
custom_data_layer_1/name = "HandObtainable"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "Obtain"
custom_data_layer_2/type = 4
sources/0 = SubResource("TileSetAtlasSource_1e3nw")

[sub_resource type="AtlasTexture" id="AtlasTexture_qfuck"]
atlas = ExtResource("1_r5l00")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwc5y"]
atlas = ExtResource("5_2clhb")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5x3a"]
atlas = ExtResource("5_2clhb")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m32cb"]
atlas = ExtResource("5_2clhb")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eqmy"]
atlas = ExtResource("5_2clhb")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4sxd"]
atlas = ExtResource("5_2clhb")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1cq1"]
atlas = ExtResource("5_2clhb")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhy70"]
atlas = ExtResource("5_2clhb")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oilsp"]
atlas = ExtResource("5_2clhb")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tux2f"]
atlas = ExtResource("5_2clhb")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_23o2l"]
atlas = ExtResource("5_2clhb")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rkml8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfuck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwc5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5x3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m32cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eqmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4sxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1cq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhy70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oilsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tux2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23o2l")
}],
"loop": true,
"name": &"Break",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6402"]
size = Vector2(16, 16)

[node name="World" type="Node2D"]
metadata/_edit_horizontal_guides_ = [10.0]

[node name="Terrain" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lyol3")
format = 2
layer_0/name = "Terrain"
script = ExtResource("2_55rjm")
smoothness = 2
width = 1000
height = 200
flatness = 40

[node name="Editor" type="Node" parent="Terrain"]
script = ExtResource("3_8tnfu")

[node name="Player" parent="." instance=ExtResource("3_ysbs2")]
slide_on_ceiling = false
speed = 60.0
crouch_speed = 30.0
sprint_speed = 90.0
sprint_jump_speed = 120.0

[node name="TileOverlay" type="Node2D" parent="."]
script = ExtResource("5_xiyli")

[node name="Sprite2D" type="Sprite2D" parent="TileOverlay"]
texture = ExtResource("5_v0isj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileOverlay"]
sprite_frames = SubResource("SpriteFrames_rkml8")
animation = &"Break"
speed_scale = 0.0

[node name="BodyCheck" type="Area2D" parent="."]
position = Vector2(8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyCheck"]
shape = SubResource("RectangleShape2D_h6402")

[node name="Background" type="Sprite2D" parent="."]
show_behind_parent = true
texture = ExtResource("8_gl2bt")
script = ExtResource("9_xtwht")

[connection signal="body_entered" from="BodyCheck" to="Terrain/Editor" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="BodyCheck" to="Terrain/Editor" method="_on_area_2d_body_exited"]
